# vgi-explain

./: .gitignore  CLAUDE.md  Makefile  README.md  conftest.py  explain_worker.py  pyproject.toml  serve.py
.github/workflows/: ci.yml
ci/: README.md  run-integration.sh
scripts/: make_fixture.py
test/fixtures/: features.parquet  models.parquet
test/sql/: explain_classifier.test  explain_shap.test
tests/: fixtures.py  harness.py  test_client.py  test_explain.py  test_functions.py  test_registry.py
vgi_explain/: __init__.py  buffering.py  explain.py  features.py  functions.py  registry.py  schema_utils.py  worker.py
